второй этап LR-BE-02XX
